<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1,2">

    <TextView
        android:id="@+id/tvTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/tvTeam" />

    <EditText
        android:id="@+id/etTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvTeam"
        android:hint="@string/hint"
        android:singleLine="true"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etTeam"
        android:padding="5dp"
        android:text="@string/tvPlayer" />

    <EditText
        android:id="@+id/etPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvPlayer"
        android:hint="@string/hint"
        android:singleLine="true"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvSalary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPlayer"
        android:padding="5dp"
        android:text="@string/tvSalary" />

    <EditText
        android:id="@+id/etSalary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvSalary"
        android:hint="@string/hint"
        android:singleLine="true"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSalary"
        android:layout_marginTop="53dp"
        android:padding="5dp"
        android:text="@string/btnSubmit" />

</RelativeLayout>

